Fix horizontal overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,8 @@
 html,
 body {
   height: 100%;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 body {
